# HFDesignPatterns

./: README.md
Adapter/Ducks/: CMakeLists.txt  Duck.hpp  MallardDuck.hpp  Turkey.hpp  TurkeyAdapter.hpp  WildTurkey.hpp  main.cpp
Command/Undo/: CMakeLists.txt  CeilingFan.hpp  CeilingFanHighCommand.hpp  CeilingFanMediumCommand.hpp  CeilingFanOffCommand.hpp  Command.hpp  Light.hpp  LightOffCommand.hpp  LightOnCommand.hpp  NoCommand.hpp  RemoteControlWithUndo.hpp  main.cpp
Decorator/Beverage/: Beverage.hpp  CMakeLists.txt  CondimentDecorator.hpp  DarkRoast.hpp  Decaf.hpp  Espresso.hpp  HouseBlend.hpp  Milk.hpp  Mocha.hpp  Soy.hpp  Whip.hpp  main.cpp
Factory/AbstractFactory/: BlackOlives.hpp  CMakeLists.txt  Cheese.hpp  CheesePizza.hpp  ChicagPizzaStore.hpp  ChicagoPizzaIngredientFactory.hpp  ClamPizza.hpp  Clams.hpp  Dough.hpp  Eggplant.hpp  FreshClams.hpp  FrozenClams.hpp  Garlic.hpp  MarinaraSauce.hpp  MozzarellaCheese.hpp  Mushrooms.hpp  NYPizzaIngredientFactory.hpp  NYPizzaStore.hpp  Onion.hpp  Pepperoni.hpp  PepperoniPizza.hpp  Pizza.hpp  PizzaIngredientFactory.hpp  PizzaStore.hpp  PlumTomatoSauce.hpp  RedPepper.hpp  RegganoCheese.hpp  Sauce.hpp  SlicedPepperoni.hpp  Spinach.hpp  ThickCrustDough.hpp  ThinCrustDough.hpp  VeggiePizza.hpp  Veggies.hpp  main.cpp
Observer/WeatherStation/: CMakeLists.txt  CurrentConditionsDisplay.hpp  DisplayElement.hpp  ForecastDisplay.hpp  Observer.hpp  StatisticsDisplay.hpp  Subject.hpp  WeatherData.hpp  main.cpp
Singleton/Boiler/: Boiler.hpp  CMakeLists.txt  main.cpp
Strategy/Ducks/: CMakeLists.txt  DecoyDuck.hpp  Duck.hpp  FakeQuack.hpp  FlyBehavior.hpp  FlyNoWay.hpp  FlyRocketPowered.hpp  FlyWithWings.hpp  MallardDuck.hpp  ModelDuck.hpp  MuteQuack.hpp  Quack.hpp  QuackBehavior.hpp  RedheadDuck.hpp  RubberDuck.hpp  Squeak.hpp  main.cpp
Template/Barista/: CMakeLists.txt  CaffeineBeverage.hpp  CaffeineBeverageWithHook.hpp  Coffee.hpp  CoffeeWithHook.hpp  Tea.hpp  TeaWithHook.hpp  main.cpp
